unpackaged/main/default/objects/Pago_por_Categoria__c/Pago_por_Categoria__c.object-meta.xml
<CustomObject>
    <label>% Pago por Categoría</label>
    <nameField>
        <label>Categoría</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>% Pagos por Categorías</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>