unpackaged/main/default/objects/Pago_por_Categoria__c/fields/Base_Pct__c.field-meta.xml
<CustomField>
    <fullName>Base_Pct__c</fullName>
    <label>% Base</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>