unpackaged/main/default/objects/Pago_por_Categoria__c/fields/Comision_Buscar__c.field-meta.xml
<CustomField>
    <fullName>Comision_Buscar__c</fullName>
    <label>Comisión</label>
    <referenceTo>Comision__c</referenceTo>
    <relationshipLabel>% Pagos por Categorías</relationshipLabel>
    <relationshipName>Pagos_por_Categorias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>