unpackaged/main/default/objects/Pago_por_Categoria__c/fields/Cumplimiento_Pct__c.field-meta.xml
<CustomField>
    <fullName>Cumplimiento_Pct__c</fullName>
    <label>% Cumplimiento</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>