unpackaged/main/default/objects/Pago_por_Categoria__c/fields/Excedente_Pct__c.field-meta.xml
<CustomField>
    <fullName>Excedente_Pct__c</fullName>
    <label>% Excedente</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>