unpackaged/main/default/objects/Pago_por_Categoria__c/fields/Valor_del_Bono__c.field-meta.xml
<CustomField>
    <fullName>Valor_del_Bono__c</fullName>
    <label>Valor del Bono</label>
    <length>100</length>
    <type>Text</type>
</CustomField>