unpackaged/main/default/objects/Pago_por_Categoria__c/recordTypes/Categoria_Bono.recordType-meta.xml
<RecordType>
    <fullName>Categoria_Bono</fullName>
    <active>true</active>
    <description>Para RT de Comisión &quot;Plan Bono Asesor&quot;</description>
    <label>Categoria Bono</label>
</RecordType>