unpackaged/main/default/objects/Pago_por_Categoria__c/recordTypes/Categoria_Comision.recordType-meta.xml
<RecordType>
    <fullName>Categoria_Comision</fullName>
    <active>true</active>
    <description>Se usa con RT de &quot;Plan Comisión Asesor&quot;</description>
    <label>Categoria Comision</label>
</RecordType>